tests/ui/issues/issue-15756.stderr
error[E0277]: the size for values of type `[T]` cannot be known at compilation time
  --> $DIR/issue-15756.rs:7:10
   |
LL |     &mut something
   |          ^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[T]`
   = help: unsized locals are gated as unstable feature `#[feature(unsized_locals)]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
